# LumiEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/common/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  main.cpp
core/interface/: IApplication.hpp  IRuntimeModule.hpp  interface.hpp
empty/: EmptyApplication.cpp
include/: BaseApplication.h  CMakeLists.txt  GraphicsManager.h
include/RHI/: D3D12GraphicsManager.h
include/core/: Allocator.h  AssetLoader.h  BaseApplication.h  Buffer.h  Config.h  GraphicsManager.h  MemoryManager.h
include/interface/: IApplication.h  IRuntimeModule.h  Interface.h
include/lumi/: CMakeLists.txt  RHI.h  core.h  lumi.h  math.h  utils.h
include/lumi/RHI/: CMakeLists.txt  D3D12GraphicsManager.h
include/lumi/core/: Allocator.h  AssetLoader.h  BaseApplication.h  Buffer.h  CMakeLists.txt  Config.h  GraphicsManager.h  MemoryManager.h
include/lumi/interface/: IApplication.h  IRuntimeModule.h
include/lumi/math/: CMakeLists.txt  Mat.h  Vec.h  const.h  functions.h  ispc.h
include/lumi/platform/windows/: CMakeLists.txt  WindowsApplication.h
include/lumi/utils/: CMakeLists.txt  assert.h  log.h
include/math/: Const.h  Ispc.h  Math.h  Vec.h
include/platform/windows/: WindowsApplication.h
platform/windows/: cbuffer.h  helloengine_d3d.cpp
src/: CMakeLists.txt
src/RHI/: D3D12GraphicsManager.cpp
src/common/: BaseApplication.cpp  CMakeLists.txt  GraphicsManager.cpp  main.cpp
src/core/: Allocator.cpp  AssetLoader.cpp  BaseApplication.cpp  CMakeLists.txt  Config.cpp  GraphicsManager.cpp  MemoryManager.cpp  main.cpp
src/math/: CMakeLists.txt  op_common.cpp  op_matrix.cpp  op_vector.cpp
src/math/ispc/: CMakeLists.txt  op_common.ispc  op_ispc.ispc  op_matrix.ispc  op_vector.ispc
src/math/test/: CMakeLists.txt  math_test.cpp
src/platform/: CMakeLists.txt
src/platform/empty/: CMakeLists.txt  EmptyApplication.cpp
src/platform/windows/: CMakeLists.txt  WindowsApplication.cpp  copy.ps  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  helloengine_win.c
test/: CMakeLists.txt  Test_Vector.cpp  test_Matrix.cpp
